Arayüz tamamlandi. Settings iconu yerleştirilecek ve arayüz tamamlanacak.

--- a/app/src/main/res/layout/main_widget.xml
+++ b/app/src/main/res/layout/main_widget.xml
@@ -5,7 +5,11 @@
     android:background="@drawable/backgroundshape"
     android:orientation="horizontal"
     android:clipChildren="false"
-    android:padding="@dimen/widget_margin">
+    android:padding="@dimen/widget_margin"
+    android:divider="?android:dividerVertical"
+    android:showDividers="middle"
+    >
+
 
 
 
@@ -13,7 +17,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:orientation="vertical"
         android:layout_gravity="center"
 
@@ -32,169 +36,60 @@
 
     </LinearLayout>
 
+    <!--
+    <TextView
+        android:layout_width="2dp"
+        android:layout_height="fill_parent"
+        android:background="#ffffff" />
+    -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
         android:layout_gravity="center"
-
+        android:divider="?android:dividerHorizontal"
+        android:showDividers="middle"
         >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:background="#FFB300"
-            >
-            <TextView
-                android:gravity="center|bottom"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="off time"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                android:textSize="15sp"
-                android:layout_weight="1"
-                />
 
-        </LinearLayout>
 
             <TextView
                 android:id="@+id/off_text"
                 android:gravity="bottom|center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="1"
+                android:text="02:24:48"
                 android:textSize="25sp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorRed"
                 android:textStyle="bold"
                 android:layout_weight="1"
-                android:background="#FFB300"
+
                 />
 
 
-        <TextView
+         mö<TextView
             android:id="@+id/on_text"
             android:gravity="center|top"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="1"
-            android:textColor="@android:color/white"
+            android:text="05:15:30"
+            android:textColor="@color/colorGreen"
             android:textStyle="bold"
             android:textSize="25sp"
             android:layout_weight="1"
             />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            >
 
-            <TextView
-                android:gravity="center|top"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="on time"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                android:textSize="15sp"
-                android:layout_weight="1"                />
-        </LinearLayout>
 
     </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        >
-
-
-
-        <ImageButton
-            android:id="@+id/plus_button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/button_transparentup_selector"
-            android:background="@android:color/transparent"
-            />
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        >
-
-        <ImageButton
-            android:id="@+id/on_off_button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_off_clock_new"
-            android:background="@android:color/transparent"
-            />
-        <!--
-        <Button
-            android:id="@+id/on_off_button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="OFF"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:background="@android:color/transparent"
-            />
-
-        -->
-        <!--
-        -2855,908
-        289,738
-        7,824
-        14,775
-        <ImageButton
-            android:id="@+id/on_off_button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/button_transparentup_selector"
-            android:background="@android:color/transparent"
-            />
-            -->
-
-
-        <!--
-        <TextView
-            android:id="@+id/on_off_text"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="OFF"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:textSize="25dp"
-            android:layout_weight="1"
-            />
-        -->
-
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:layout_gravity="center"
         android:orientation="vertical"
         >
