--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorGray">#808285</color>
     <color name="colorGreen">#80C34F</color>
     <color name="colorRed">#D34237</color>
+    <color name="colorGoogleDrive">#FFB300</color>
 </resources>
