--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -25,6 +25,97 @@
     android:focusableInTouchMode="true"
     android:id="@+id/rlRoot"
     >
+
+    <LinearLayout
+        android:id="@+id/linearLayoutHeader"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorGray"
+        android:layout_weight="1.3"
+        android:layout_marginBottom="10dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/colorGray"
+            android:layout_weight="1"
+            >
+            <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical|center_horizontal"
+                android:hint="@string/active_period"
+                android:text="@string/active_period"
+                android:textStyle="bold"
+                android:isScrollContainer="false"
+                android:inputType="number"
+                android:maxLength="250"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="70sp"
+                android:layout_weight="1"
+                android:editable="false"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:background="@color/colorGray"
+            android:layout_weight="1"
+            >
+            <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+
+                android:id="@+id/etxtHour"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical|center_horizontal"
+                android:hint="@string/hour"
+                android:text="@string/hour"
+                android:textStyle="bold"
+                android:isScrollContainer="false"
+                android:inputType="number"
+                android:maxLength="4"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="70sp"
+                android:layout_weight="1"
+                android:editable="false"
+                />
+            <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+
+                android:id="@+id/etxtMin"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical|center_horizontal"
+                android:hint="@string/min"
+                android:text="@string/min"
+                android:textStyle="bold"
+                android:isScrollContainer="false"
+                android:inputType="number"
+                android:maxLength="4"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="70sp"
+                android:layout_weight="1"
+                android:editable="false"
+                />
+        </LinearLayout>
+
+
+        </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
@@ -229,14 +320,99 @@
             </LinearLayout>
         </LinearLayout>
 
+    </LinearLayout>
 
 
 
+    <LinearLayout
 
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorGray"
+        android:layout_weight="1.3"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/colorGray"
+            android:layout_weight="1"
+            >
+            <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical|center_horizontal"
+                android:hint="@string/passive_period"
+                android:text="@string/passive_period"
+                android:textStyle="bold"
+                android:isScrollContainer="false"
+                android:inputType="number"
+                android:maxLength="250"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="70sp"
+                android:layout_weight="1"
+                android:editable="false"
 
+                />
+        </LinearLayout>
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:background="@color/colorGray"
+            android:layout_weight="1"
+            >
+            <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical|center_horizontal"
+                android:hint="@string/hour"
+                android:text="@string/hour"
+                android:textStyle="bold"
+                android:isScrollContainer="false"
+                android:inputType="number"
+                android:maxLength="4"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="70sp"
+                android:layout_weight="1"
+                android:editable="false"
+                />
+            <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical|center_horizontal"
+                android:hint="@string/min"
+                android:text="@string/min"
+                android:textStyle="bold"
+                android:isScrollContainer="false"
+                android:inputType="number"
+                android:maxLength="4"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="70sp"
+                android:layout_weight="1"
+                android:editable="false"
+                />
+        </LinearLayout>
 
 
     </LinearLayout>
+
+
+
 
     <LinearLayout
         android:id="@+id/linearLayout2"
