--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorGreen">#80C34F</color>
     <color name="colorRed">#D34237</color>
     <color name="colorGoogleDrive">#FFB300</color>
+    <color name="colorBackgroundGray2">#96212121</color>
 </resources>
