--- a/app/src/main/res/drawable/button_settings_inv.xml
+++ b/app/src/main/res/drawable/button_settings_inv.xml
@@ -8,7 +8,7 @@
         android:left="5dp"
         >
         <shape android:shape="rectangle">
-            <solid android:color="#FFB300"/>
+            <solid android:color="@color/colorBackgroundGray2"/>
             <corners android:radius="4dp"/>
             <padding android:left="1dp"
                 android:top="0dp"
