--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -25,15 +25,21 @@
     android:focusableInTouchMode="true"
     android:id="@+id/rlRoot"
     >
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/colorBacgroundGray"
+        android:layout_weight="1"
+        >
     <LinearLayout
         android:id="@+id/linearLayoutHeader"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/colorGray"
-        android:layout_weight="1.3"
-        android:layout_marginBottom="10dp"
+        android:layout_weight="3"
+        android:layout_marginBottom="1dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +49,6 @@
             android:layout_weight="1"
             >
             <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
-
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:focusable="false"
@@ -202,7 +207,6 @@
                     android:background="@drawable/button_normal_selector"
                     android:adjustViewBounds="true"
                     android:layout_weight="1"
-
                     />
 
 
@@ -325,16 +329,24 @@
 
     </LinearLayout>
 
-
-
+    </LinearLayout>
     <LinearLayout
-
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="1dp"
+        android:layout_weight="1"
+        android:background="@color/colorBacgroundGray"
+        android:layout_marginBottom="1dp"
+        >
+    <LinearLayout
+        android:layout_marginTop="1dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/colorGray"
-        android:layout_weight="1.3"
+        android:layout_weight="3.2"
+        android:layout_marginBottom="1dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -415,19 +427,15 @@
 
 
     </LinearLayout>
-
-
-
-
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:layout_weight="1"
         android:background="@color/colorGray"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="1dp"
         >
 
         <LinearLayout
@@ -628,6 +636,9 @@
 
 
     </LinearLayout>
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/linearLayout3"
