--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <data>
 
@@ -17,14 +18,71 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="5dp"
     android:background="@color/colorBacgroundGray"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".DialogActivity"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:id="@+id/rlRoot"
     >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="@color/colorGray"
+        android:layout_weight="1.4"
+        android:layout_marginBottom="2dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            >
+            <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:gravity="left"
+                android:hint="@string/app_name"
+                android:text="@string/app_name"
+                android:textStyle="bold"
+                android:isScrollContainer="false"
+                android:inputType="none"
+                android:maxLength="25"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textSize="70sp"
+                android:editable="false"
+                android:clickable="false"
+                android:layout_marginLeft="10dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="3">
+            <ImageButton
+                android:id="@+id/btn_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                android:src="@android:drawable/ic_dialog_info"
+                android:background="@drawable/button_normal_selector"
+                android:adjustViewBounds="true"
+                android:layout_weight="1"
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="2dp"
+                />
+        </LinearLayout>
+
+        </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
