--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -39,21 +39,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
+            android:layout_gravity="center"
             >
             <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:gravity="left"
+                android:gravity="center"
+                android:layout_gravity="center"
                 android:hint="@string/app_name"
                 android:text="@string/app_name"
                 android:textStyle="bold"
                 android:isScrollContainer="false"
                 android:inputType="none"
                 android:maxLength="25"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white"
+                android:textColor="@color/colorGreen"
+                android:textColorHint="@color/colorGreen"
                 android:textSize="70sp"
                 android:editable="false"
                 android:clickable="false"
@@ -68,8 +71,8 @@
             android:layout_weight="3">
             <ImageButton
                 android:id="@+id/btn_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:scaleType="centerInside"
                 android:src="@android:drawable/ic_dialog_info"
