--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -4,31 +4,112 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBacgroundGray"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="5"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorGray"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:padding="10dp"
-            android:text="Merhaba" />
+        <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:gravity="center"
+            android:hint="@string/usage"
+            android:text="@string/usage"
+            android:textStyle="bold"
+            android:isScrollContainer="false"
+            android:inputType="none"
+            android:maxLength="250"
+            android:textColor="@color/colorGreen"
+            android:textColorHint="@color/colorGreen"
+            android:textSize="70sp"
+            android:editable="false"
+            android:clickable="false"
+            android:layout_marginLeft="10dp"
+            />
+    </LinearLayout>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="10dp" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorGray"
+        >
+        <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:gravity="left"
+            android:hint="@string/info_text"
+            android:text="@string/info_text"
+            android:textStyle="bold"
+            android:isScrollContainer="false"
+            android:inputType="none"
+            android:maxLength="250"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:textSize="70sp"
+            android:editable="false"
+            android:clickable="false"
+            android:layout_marginLeft="10dp"
+            />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="5"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/colorGray"
         >
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:visibility="invisible"
+            />
         <Button
             android:id="@+id/btn_quit"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:text="QUIT"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center"
+            android:background="@drawable/widget_button_save_selector"
+            />
+        <Space
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/quit"
+            android:layout_weight="3"
+            android:visibility="invisible"
             />
     </LinearLayout>
 
