--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -101,6 +101,8 @@
         android:background="@color/colorGray"
         android:layout_weight="3"
         android:layout_marginBottom="1dp"
+        android:divider="?android:dividerVertical"
+        android:showDividers="middle"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -137,6 +139,8 @@
             android:orientation="horizontal"
             android:background="@color/colorGray"
             android:layout_weight="1"
+            android:divider="?android:dividerVertical"
+            android:showDividers="middle"
             >
             <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
 
@@ -408,6 +412,8 @@
         android:background="@color/colorGray"
         android:layout_weight="3.2"
         android:layout_marginBottom="1dp"
+        android:divider="?android:dividerVertical"
+        android:showDividers="middle"
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -444,6 +450,8 @@
             android:orientation="horizontal"
             android:background="@color/colorGray"
             android:layout_weight="1"
+            android:divider="?android:dividerVertical"
+            android:showDividers="middle"
             >
             <com.mobiledatatimerwidget.AutoSize.AutoFitEditText
 
