--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -21,7 +21,7 @@
     android:paddingTop="5dp"
     android:background="@color/colorBacgroundGray"
     android:orientation="vertical"
-    tools:context=".DialogActivity"
+    tools:context=".activity.DialogActivity"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:id="@+id/rlRoot"
