--- a/app/src/main/res/layout/fragment_software_dialog.xml
+++ b/app/src/main/res/layout/fragment_software_dialog.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     >
 
     <data>
@@ -761,17 +762,17 @@
             android:orientation="horizontal"
             android:background="@android:color/transparent"
             >
-        <Button
-            android:id="@+id/cccc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/ok_btn_id"
-            android:layout_alignBottom="@+id/ok_btn_id"
-            android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@+id/ok_btn_id"
-            android:text="Cancel"
-            android:visibility="invisible"
-            />
+            <com.google.android.gms.ads.AdView
+
+                android:id="@+id/adView"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/alt_reklam"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_gravity="center_vertical|center"
+                android:gravity="center"
+                >
+            </com.google.android.gms.ads.AdView>
 
             </LinearLayout>
 
