Butonların push renkleri değiştirildi. Reklam test olarak derlendi. Çalıştırıldı.

--- a/app/src/main/res/drawable/widget_button_save_push.xml
+++ b/app/src/main/res/drawable/widget_button_save_push.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle"
     android:visible="true">
 
-    <corners android:radius="5dip" />
+    <corners android:radius="4dip" />
     <solid android:color="@color/colorGreen"/>
     <stroke
-        android:color="#B0C34F"
-        android:width="5dip" />
+        android:color="#68993d"
+        android:width="3dip" />
 </shape>
